--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,9 @@
 {
-  "version":2,
-  "builds":[
+  "version": 2,
+  "builds": [
     {
-      "src":"./index.js",
-      "use":"@vercel/node"
+      "src": "index.js",
+      "use": "@now/node"
     }
-  ],
-  "routes": [
-    {
-      "src":"/(.*)",
-      "dest":"/"
-    }
-  ],
-  "rewrites": [
-    {"source":"/(.*)", "destination":"/"}
   ]
 }
