--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,22 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.js",
-      "use": "@now/node"
+      "src": "./index.js",
+      "use": "@vercel/node"
     }
-  ]
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.js"
+    }
+  ],
+  "functions": {
+    "controllers/*.js": {
+      "maxDuration": 60
+    },
+    "middleware/**/*.js": {
+      "maxDuration": 60
+    }
+  }
 }
