--- a/vercel.json
+++ b/vercel.json
@@ -2,22 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "./index.js",
+      "src": "./app.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/index.js"
+      "src": "/.*",
+      "dest": "/app.js"
     }
-  ],
-  "functions": {
-    "controllers/*.js": {
-      "maxDuration": 60
-    },
-    "middleware/**/*.js": {
-      "maxDuration": 60
-    }
-  }
+  ]
 }
