--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node":"16.x",
-    "npm":"8.x"
+    "node": "16.x",
+    "npm": "8.x"
   },
   "scripts": {
     "start": "node index.js"
@@ -15,6 +15,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.0",
